# openrb-pico

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: c-cpp.yml
cmake/: AddBoardTarget.cmake  FindArduino.cmake
inc/: adapter.h  common.h  custom_config.h  default_midi_mapping.tbl  drums.h  generic_fifo.h  identifiers.h  instrument_manager.h  instruments.h  midi.h  midi_map.h  orb_bsp.h  orb_debug.h  packet_queue.h  pins_arduino.h  pins_common.h  pins_rp2040_orb_custom_0_1.h  pins_rp2040_usbh.h  util.h  xbox_controller_driver.h  xbox_device_driver.h  xbox_one_protocol.h
src/: drums.c  guitar.c  host_drivers.c  instrument_manager.c  main.c  main.cpp  midi.c  packet_queue.c  usb_descriptors.c  wla_identifiers.c  xbox_controller_driver.c  xbox_device_driver.c  xbox_one_protocol.c
